<resources>
    <string name="app_name">W23_G1_GTPredict</string>
    <string name="imgDesc">companyNameImg</string>
    <string name="imgDescgtIcon">gtIconimg</string>
    <string name="imgDescGtPredict">gtPredictimg</string>
    <string name="btnDesc">ENTER</string>
    <string name="txtViewActivity1"><![CDATA[Quick GT Power & EFF Calc.]]></string>
    <string name="textNumTemp">temp</string>
    <string name="txtSpinnerPrompt">OutputType</string>
    <string name="btnCalcQuick">Predict</string>
    <string-array name="outputType">

        <item>Power Output</item>
        <item>Efficiency</item>
    </string-array>
    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>
    <string name="txtPhone">Phone Number</string>
    <string name="txtSend">Send SMS</string>
    <string name="txtBack">Back</string>
    <string name="city">City</string>
    <string name="cityenter">Enter the City</string>
    <string name="Province">Province</string>
    <string name="Heading">Temperature</string>
    <string name="txtBtn">Check  Temperature</string>
</resources>